# ghostty-zed-extension

./: .gitignore  Cargo.toml  README.md  extension.toml
.github/workflows/: release.yml
languages/ghostty/: config.toml  highlights.scm
lsp/: Cargo.toml
lsp/src/: main.rs
src/: lib.rs
